--- a/examples/hello_world/node1/config.json
+++ b/examples/hello_world/node1/config.json
@@ -1,28 +1,19 @@
 {
-    "process": {"max_qsize": 100},
+    "node_id": "node1",
     "meta": {
         "mode": "pubsub",
-        "receiver_mode": "single",
-        "receiver_timeout": 0.5,
-        "senders": [
-            {
-                "data_type": "NativeObject",
+        "sender": { 
+                "raw_type": "RawImage",
                 "mware": "zeromq",
-                "cls_name": "Node1",
-                "topic": "/node1",
-                "carries": "tcp",
-                "blocking": true,
+                "topic": "/topic1",
                 "params": {
                     "socket_sub_port": 5759,
                     "socket_pub_port": 5758
                 }
             }
-        ]
     },
     "params": {
-        "init": {
-            "model": "model_path"
-        },
+        "model": "model_path",
         "run": {
             "width": 100
         }
