--- a/examples/hello_world/node2/config.json
+++ b/examples/hello_world/node2/config.json
@@ -1,13 +1,24 @@
 {
     "node_id": "node2",
+    "process": {"enable_parallel": true},
     "meta": {
         "receivers": [
             {
                 "node_id": "node1",
                 "topic": "/topic1",
+                "blocking": false,
                 "params": {
                     "socket_sub_port": 5759,
                     "socket_pub_port": 5758
+                }
+            },
+            { 
+                "node_id": "node3",
+                "topic": "/topic3",
+                "blocking": false,
+                "params": {
+                    "socket_sub_port": 5760,
+                    "socket_pub_port": 5761
                 }
             }
         ],
