--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add a short description here"
 authors = [
     { name = "zhaokefei", email = "zhaokefei@tezign.com" }
 ]
-dependencies = ["wrapyfi[all]~=0.4.30", "dotmap~=1.3.30", "pyrsistent~=0.20.0", "pydantic~=2.5.3", "xmltodict~=0.13.0", "loguru~=0.7.2", "numpy~=1.26.3", "prometheus-client~=0.19.0", "schedule~=1.2.1", "filelock~=3.13.1"]
+dependencies = ["wrapyfi[all]~=0.4.30", "dotmap~=1.3.30", "pyrsistent~=0.20.0", "pydantic~=2.5.3", "xmltodict~=0.13.0", "loguru~=0.7.2", "prometheus-client~=0.19.0", "schedule~=1.2.1", "filelock~=3.13.1", "numpy~=1.24.3"]
 readme = "README.md"
 requires-python = ">= 3.8"
 license = { text = "MIT" }
@@ -16,3 +16,11 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
+virtual = true
+
+[tool.rye.workspace]
+members = ["src/coral-*"]
+
+[[tool.rye.sources]]
+name = "default"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple"
