--- a/examples/hello_world/node3/config.json
+++ b/examples/hello_world/node3/config.json
@@ -14,8 +14,6 @@
     },
     "params": {
         "model": "model_path",
-        "run": {
-            "width": 100
-        }
+        "run": 100
     }
 }
