--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "filelock~=3.13.1",
     "numpy~=1.24.3",
     "opencv-python>=4.9.0.80",
+    "requests>=2.31.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
