feat: 简化node上报结构

--- a/examples/hello_world/node2/config.json
+++ b/examples/hello_world/node2/config.json
@@ -10,6 +10,9 @@
                 "node_id": "node2"
             }
     },
+    "generic": {
+        "skip_frame": 2
+    },
     "params": {
         "model": "model_path",
         "run": 100
