--- a/examples/hello_world/node1/config.json
+++ b/examples/hello_world/node1/config.json
@@ -5,6 +5,10 @@
             "node_id": "node1"
         }
     },
+    "generic": {
+
+        "enable_metrics": false
+    },
     "params": {
         "model": "model_path",
         "width": 100
