--- a/examples/hello_world/node2/config.json
+++ b/examples/hello_world/node2/config.json
@@ -7,7 +7,8 @@
             }
         ],
         "sender": {
-                "node_id": "node2"
+                "node_id": "node2",
+                "raw_type": "RawImage"
             }
     },
     "generic": {
