feat: 排查了pub/sub慢的原因，ndarray字段使用自定义字段，目前(640,640,3)的图片数据测试pub -> 170次/s，sub -> 70次/s

--- a/examples/hello_world/node2/config.json
+++ b/examples/hello_world/node2/config.json
@@ -1,14 +1,18 @@
 {
     "node_id": "node2",
+    "process": {
+        "enable_parallel": true,
+        "count": 5
+    },
     "meta": {
         "receivers": [
             {
                 "node_id": "node1"
             }
         ],
-        "sender": {
-                "node_id": "node2",
-                "raw_type": "RawImage"
+        "sender": 
+            {
+                "node_id": "node2"
             }
     },
     "generic": {
