feat: 重新定义register数据，更通用

--- a/examples/hello_world/node2/config.json
+++ b/examples/hello_world/node2/config.json
@@ -2,7 +2,7 @@
     "node_id": "node2",
     "process": {
         "enable_parallel": true,
-        "count": 5
+        "count": 3 
     },
     "meta": {
         "receivers": [
@@ -18,8 +18,5 @@
     "generic": {
         "enable_metrics": false
     },
-    "params": {
-        "model": "model_path",
-        "run": 100
-    }
+    "params": {}
 }
