--- a/examples/hello_world/node3/config.json
+++ b/examples/hello_world/node3/config.json
@@ -9,8 +9,5 @@
 
         "enable_metrics": false
     },
-    "params": {
-        "model": "model_path",
-        "run": 100
-    }
+    "params": {}
 }
