--- a/examples/hello_world/node1/config.json
+++ b/examples/hello_world/node1/config.json
@@ -8,8 +8,5 @@
     "generic": {
         "enable_metrics": false
     },
-    "params": {
-        "model": "model_path",
-        "width": 100
-    }
+    "params": {}
 }
