feat: 重构部分代码，添加类描述

--- a/examples/hello_world/node3/config.json
+++ b/examples/hello_world/node3/config.json
@@ -3,7 +3,10 @@
     "meta": {
         "receivers": [{
             "node_id": "node2"
-        }]
+        }],
+        "sender": {
+            "node_id": "node3"
+        }
     },
     "generic": {
 
