fix: 修复 input interface 没有returenPayload的参数

--- a/examples/hello_world/node2/config.json
+++ b/examples/hello_world/node2/config.json
@@ -12,7 +12,8 @@
         ],
         "sender": 
             {
-                "node_id": "node2"
+                "node_id": "node2",
+                "raw_type": "RawImage"
             }
     },
     "generic": {
