--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "numpy~=1.24.3",
     "opencv-python>=4.9.0.80",
     "requests>=2.31.0",
+    "paho-mqtt>=2.0.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
