feat: 添加RayImagePayload 的 ndarray 字段共享内存,减少传输的时间延时

--- a/examples/hello_world/node1/config.json
+++ b/examples/hello_world/node1/config.json
@@ -1,8 +1,12 @@
 {
     "node_id": "node1",
+    "generic": {
+        "enable_shared_memory": false
+    },
     "meta": {
         "sender": { 
-            "node_id": "node1"
+            "node_id": "node1",
+            "blocking": true
         }
     },
     "params": {}
