--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "opencv-python>=4.9.0.80",
     "requests>=2.31.0",
     "paho-mqtt>=2.0.0",
+    "SharedArray>=3.2.3",
+    "apscheduler>=3.10.4",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
