feat: 完善共享内存管理，减少内存泄露的可能性

--- a/examples/hello_world/node1/config.json
+++ b/examples/hello_world/node1/config.json
@@ -1,12 +1,11 @@
 {
     "node_id": "node1",
     "generic": {
-        "enable_shared_memory": false
+        "enable_shared_memory": true
     },
     "meta": {
         "sender": { 
-            "node_id": "node1",
-            "blocking": true
+            "node_id": "node1"
         }
     },
     "params": {}
