--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Coral节点开发
+site_name: Coral框架
 theme:
   name: material
 
@@ -6,6 +6,7 @@ nav:
   - 主页: "index.md"
   - 使用: "develop.md"
   - 示例: 
+    - 节点类型: "examples/node_type.md"
     - 输入节点: "examples/input.md"
     - 推理节点: "examples/interface.md"
     - 通用节点: "examples/common.md"
@@ -14,6 +15,7 @@ nav:
     - 入参模块: "modules/params.md"
     - 出参模块: "modules/results.md"
     - 通信模块: "modules/communication.md"
+    - 监控模块: "modules/monitoring.md"
     - 通用模块: "modules/common.md"
   - 模版开发: "template.md"
 
